# chatgpt-wechatpay-docker

./: .gitignore  docker-compose.yml
caddy/: Caddyfile
gpt-backend/: .dockerignore  Dockerfile  main.py  prompts.py  pyproject.toml  requirements.txt  run.bash  run.py  secerts_example.toml  settings.py
gpt-backend/app/: auth.py  models.py  routers.py  schemas.py
gpt-backend/chat/: currency.py  openai.py  wechatapi.py
gpt-frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  vite.config.ts
gpt-frontend/src/: App.vue  components.d.ts  main.ts  utils.ts
gpt-frontend/src/components/: ChatBox.vue  NavigationBar.vue  PremiumCard.vue  UserInfoBar.vue
gpt-frontend/src/router/: index.ts
gpt-frontend/src/stores/: user.ts
gpt-frontend/src/views/: ChatView.vue  HomeView.vue  UserView.vue
